--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -149,7 +149,7 @@ for network users like [LNS operators][open-lns] or mobile [service providers][s
 The tool provides a clear invoice once transactions are complete to simplify accounting.
 
 [bme]: /hnt-token/#data-credits-and-burn-and-mint-economics
-[sphere]: https://helium.sphere.engineer
+[sphere]: https://sphere.engineer
 [open-lns]: /iot/open-lns
 [service-providers]: /mobile/service-providers
 [hip-69]: https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md
