--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -349,7 +349,7 @@ describe("onboarding server", () => {
 
 ## Claiming Rewards on Rewardable Entities
 
-A system of oracles keep track of the rewards owed to each Rewardable Entity. For example, in the
+A system of oracles keeps track of the rewards owed to each Rewardable Entity. For example, in the
 IOT network there are oracles that keep track of the IOT tokens earned by each Hotspot for PoC.
 
 These oracles are responsible ONLY for tracking the total lifetime rewards associated with a
