--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -24,7 +24,7 @@ For example, let's consider this public key: `6r4x69WHPPDzUuMpJ7vwSUiU6e73KJqeoP
 
 If we check the
 [Solana Explorer, under Anchor Data](https://explorer.solana.com/address/6r4x69WHPPDzUuMpJ7vwSUiU6e73KJqeoPyZ8nHQTmFP/anchor-account?cluster=devnet)
-for this account, we can see that this is a DaoV0 on the devnet `helium-sub-daos`` contract.
+for this account, we can see that this is a `DaoV0` on the devnet `helium-sub-daos` contract.
 
 ![Dao in Explorer](/img/solana/dao-in-explorer.png)
 
@@ -32,13 +32,13 @@ Scrolling up we can see that it is, in fact, owned by the Helium subDAO's progra
 
 ![Program Owner](/img/solana/program-owner.png)
 
-This means that only the helium-sub-daos program can make changes to this account. On other chains,
-a Program may be called a Smart Contract. Accounts are either owned by a program, or owned by the
-system program. An account owned by the System Program is generally either a wallet (holding
-someone's sol), or an account that has yet to be initialized.
+This means that only the ``helium-sub-daos`` program can make changes to this account. On other chains,
+a Program may be called a Smart Contract. Accounts are either owned by a program or owned by the
+system program. An account owned by the System Program is generally either a Wallet (holding
+someone's SOL), or an account that has yet to be initialized.
 
-On Solana, a Wallet is just an Account with some Sol on it owned by the system program. The owner of
-that wallet controls the private key to that account, and so can sign transactions as that public
+On Solana, a Wallet is just an account with some SOL-token in it, owned by the system program. The owner of
+that Wallet controls the private key to that account, and so can sign transactions as that public
 key.
 
 ### PDAs
@@ -78,9 +78,9 @@ const daoAddr = daoKey(new PublicKey("...hnt mint..."))[0];
 :::note Helium PDAs and Mints
 
 You'll notice that if you trace the graph of Helium PDAs, they always lead back to the address of
-either the HNT token mint, or the subdao token mint.
+either the HNT token mint, or the subDAO token mint.
 
-This design is intentional. Rather than making daos, subdaos, etc global, we opted to make them
+This design is intentional. Rather than making DAOs, subDAOs, etc global, we opted to make them
 dependent on the specific mints being used. This allows us to set up testing scenarios in which we
 use a testing token alongside the real tokens. This design also allows for easier reuse of our
 contracts throughout the Solana community.
@@ -91,7 +91,7 @@ contracts throughout the Solana community.
 
 To understand the Helium model on Solana, it's important to understand how tokens work on Solana.
 
-You might imagine a wallet is some kind of Account (data struct) holding all of your tokens. This is
+You might imagine a Wallet is some kind of account (data struct) holding all of your tokens. This is
 not the case!
 
 Instead, a Wallet is really a collection of `TokenAccount`s (Accounts whose data is a
@@ -114,8 +114,8 @@ owners.
 Associated token accounts are often the first use of PDAs you will see as a developer on Solana.
 
 Given the above model, it is possible for a given wallet to have multiple token accounts for the
-same token. That is both messy, and hard to index. Early in the days of solana, a program called
-`associated-token` emerged. Associated token says that the account for a given wallet and mint can
+same token. That is both messy, and hard to index. Early in the days of Solana, a program called
+`associated-token` emerged. `Associated-token` says that the account for a given Wallet and mint can
 be derived by:
 
 <!-- prettier-ignore -->
@@ -126,8 +126,8 @@ be derived by:
   )
 ```
 
-Generally, token accounts are created through the associated token program so that they can be
-guarenteed to be accessed at an easy-to-find address.
+Generally, token accounts are created through the `associated-token` program so that they can be
+guaranteed to be accessed at an easy-to-find address.
 
 ### Fetching Data
 
@@ -143,9 +143,9 @@ const account = await connection.getAccountInfo(new PublicKey("..."))
 console.log(account.data)
 ```
 
-This will get you the binary data of any account stored on chain, however you will need to decode
-the data your self. Most programs come with their own sdks for reading and deserializing data. For
-example, Spl Token (the token program), comes with @solana/spl-token
+This will get you the binary data of any account stored on chain; however you will need to decode
+the data yourself. Most programs come with their own SDKs for reading and deserializing data. For
+example, SPL Token (the token program), comes with @solana/spl-token
 
 <!-- prettier-ignore -->
 ```js
@@ -180,16 +180,16 @@ const daoAccount = await program.account.daoV0.fetch(new PublicKey("...dao key..
 ## Sending Transactions
 
 Transactions are how we modify data on Solana. All Helium SDKs use the standard
-[Anchor](https://github.com/coral-xyz/anchor) sdk.
+[Anchor](https://github.com/coral-xyz/anchor) SDK.
 
 That means the interface to all instructions are predictable. You should be able to look at either
 our IDLs, or the programs themselves, and see what accounts need to be passed to generate
 instructions.
 
 The best way to understand how to take certain actions against Helium on Solana is to look at
-[our tests](https://github.com/helium/helium-program-library/tree/master/tests)
+[our tests](https://github.com/helium/helium-program-library/tree/master/tests).
 
-For example, to submit a data credits delegation, the code may look something like this:
+For example, to submit a Data Credits delegation, the code may look something like this:
 
 <!-- prettier-ignore -->
 ```js
@@ -221,11 +221,11 @@ await program.methods
 An RPC is an application's gateway to the Solana cluster. RPC Nodes do not participate in consensus
 and instead are dedicated to data requests.
 
-All of the RPCs used in the Solana Migration follow the Solana chain and will index the NFT data
+All the RPCs used in the Solana Migration follow the Solana chain and will index the NFT data
 that Core Developers created in Compression NFTs. This is one reason the Helium Network is able to
 mint a million or more NFTs on Solana.
 
-You may need to run an RPC service to access public Solana clusters. Many services are free and
+You may need to run an RPC service to access public Solana clusters. Many services are free, and
 others are paid. The Foundation uses Helius as their RPC Provider, and it’s useful to use a PRC
 provider that is familiar with compression. They will all support this at some point.
 
