--- a/docs/archive/helium-hotspot-app.mdx
+++ b/docs/archive/helium-hotspot-app.mdx
@@ -12,17 +12,22 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 
-Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network. Nova Labs no longer manufacturers Hotspots, but there is now an extensive [list of manufacturers who sell approved Hotspots](/hotspot-makers).
+Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
+Nova Labs no longer manufacturers Hotspots, but there is now an extensive
+[list of manufacturers who sell approved Hotspots](/hotspot-makers).
 
 :::tip Wallet Functionality
 
-Use the [Helium Wallet app](/wallets/helium-wallet-app) to interact with tokens, take part in governance, and all other non Hotspot management functions.
+Use the [Helium Wallet app](/wallets/helium-wallet-app) to interact with tokens, take part in
+governance, and all other non Hotspot management functions.
 
 :::
 
 ## Helium Hotspot App Overview
 
-The Helium Hotspot apps for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and [Android](https://play.google.com/store/apps/details?id=com.helium.wallet) include everything needed to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot.
+The Helium Hotspot apps for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
+[Android](https://play.google.com/store/apps/details?id=com.helium.wallet) include everything needed
+to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot.
 
 The app can be used to:
 
@@ -34,7 +39,8 @@ The app can be used to:
 
 ## App Tabs
 
-There are four tabs on the Helium Hotspot App interface, tab the buttons below to see more information on each Tab.
+There are four tabs on the Helium Hotspot App interface, tab the buttons below to see more
+information on each Tab.
 
 <Tabs block={true}>
 
@@ -48,7 +54,8 @@ There are four tabs on the Helium Hotspot App interface, tab the buttons below t
     <div class="col col--8" style={{ marginBottom: 0 }}>
       <p>The Hotspot tab shows the Hotspot(s) held by the signed in Wallet. </p>
       <p>
-        Tap on each one to view details, adjust location and update wifi on the <code>Hotspot Details</code> screen.
+        Tap on each one to view details, adjust location and update wifi on the{' '}
+        <code>Hotspot Details</code> screen.
       </p>
       <p>Use the Plus Sign Icon to onboard new Nova Labs or FreedomFi Hotspots.</p>
     </div>
@@ -65,8 +72,13 @@ There are four tabs on the Helium Hotspot App interface, tab the buttons below t
       <img className="appscreen" src={useBaseUrl('img/hotspot-app/hotspot-details.png')} />
     </div>
     <div class="col col--8" style={{ marginBottom: 0 }}>
-      <p>The Hotspot Details screen is used to assert the location for a Hotspot or transfer the Hotspot to another Wallet.</p>
-      <p>Use the Gear Icon to adjust Update the Wifi connection and run diagnostics on the Hotspot.</p>
+      <p>
+        The Hotspot Details screen is used to assert the location for a Hotspot or transfer the
+        Hotspot to another Wallet.
+      </p>
+      <p>
+        Use the Gear Icon to adjust Update the Wifi connection and run diagnostics on the Hotspot.
+      </p>
     </div>
   </div>
 </div>
@@ -81,7 +93,10 @@ There are four tabs on the Helium Hotspot App interface, tab the buttons below t
       <img className="appscreen" src={useBaseUrl('img/hotspot-app/hotspot-onboarding.png')} />
     </div>
     <div class="col col--8" style={{ marginBottom: 0 }}>
-      <p>Select the Model of the Hotspot to be added and follow the prompts on screen to onboard a new Hotspot to the Helium Network.</p>
+      <p>
+        Select the Model of the Hotspot to be added and follow the prompts on screen to onboard a
+        new Hotspot to the Helium Network.
+      </p>
     </div>
   </div>
 </div>
@@ -96,8 +111,14 @@ There are four tabs on the Helium Hotspot App interface, tab the buttons below t
       <img className="appscreen" src={useBaseUrl('img/hotspot-app/app-settings.png')} />
     </div>
     <div class="col col--8" style={{ marginBottom: 0 }}>
-      <p>The Settings tab allows the user to configure apps PIN settings, set the app Language, reveal the 12 security words, Export the Private Key and view the current app version. </p>
-      <p>Users can also copy the wallet's Helium Wallet address and coresponding Solana Wallet address.</p>
+      <p>
+        The Settings tab allows the user to configure apps PIN settings, set the app Language,
+        reveal the 12 security words, Export the Private Key and view the current app version.{' '}
+      </p>
+      <p>
+        Users can also copy the wallet's Helium Wallet address and coresponding Solana Wallet
+        address.
+      </p>
     </div>
   </div>
 </div>
@@ -110,4 +131,6 @@ There are four tabs on the Helium Hotspot App interface, tab the buttons below t
 
 ## Original Helium Hotspot Warranty
 
-The Helium Hotspot limited warranty is only valid for the original sale to the original owner. Resold Helium Hotspots from anyone other than Helium directly are not under any warranty whatsoever. Please refer to their documentation for any authorized reseller policy.
+The Helium Hotspot limited warranty is only valid for the original sale to the original owner.
+Resold Helium Hotspots from anyone other than Helium directly are not under any warranty whatsoever.
+Please refer to their documentation for any authorized reseller policy.
